# tldr-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  vi.yml
git-hooks/: commit-msg  pre-commit
markdown/: Cargo.toml
markdown/src/: lib.rs  renderer.rs  themes.rs
markdown/src/snapshots/: markdown__renderer__tests__get_bullet_line_should_render_bullets.snap  markdown__renderer__tests__get_code_should_render.snap  markdown__renderer__tests__get_header_should_render_header.snap  markdown__renderer__tests__get_indent_line_should_render.snap  markdown__renderer__tests__get_line_to_render_should_render_bullets.snap  markdown__renderer__tests__get_line_to_render_should_render_code.snap  markdown__renderer__tests__get_line_to_render_should_render_header.snap  markdown__renderer__tests__get_line_to_render_should_render_indents.snap  markdown__renderer__tests__get_link_should_render.snap  markdown__renderer__tests__render_text_should_render_code_blocks_inline.snap  markdown__renderer__tests__render_text_should_render_links_inline.snap
markdown/src/themes/: color.rs
src/: git_helpers.rs  lib.rs  main.rs  markdown.rs  tldr.rs  tldr_helper.rs
src/markdown/: color.rs  themes.rs
