[package]
name = "tldr"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
markdown = { path = "markdown" }
markdown_rs_terminal = { path = "../markdown-rs-terminal"}
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
config = "0.14.0"
dirs = "5.0.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde_json = "1.0.117"
zip = "2.1.3"
